--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <title>CS 355 Home Page</title>
 <body>
 <h1>This is my home page for CS 355</h1>
+  <a href=https://gagandeep1051.github.io/WeatherApp/>
 </body>
 </html>
