--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>CS 355 Home Page</title>
 <body>
 <h1>This is my home page for CS 355</h1>
-  <a href=https://gagandeep1051.github.io/WeatherApp/>>Wealther app</a>
+  <a href=https://gagandeep1051.github.io/WeatherApp/>Wealther app</a>
+  <a href= https://gagandeep1051.github.io/Resume.FakeWebpage/>Fake Resume</a>
 </body>
 </html>
