--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-
 <!DOCTYPE html>
 <html>
+<link rel="Stylesheet" href="Dashboardstyle.css">
 <title>CS 355 Home Page</title>
 <body>
-<h1>This is my home page for CS 355</h1>
-  <a href=https://gagandeep1051.github.io/WeatherApp/>Wealther app</a>
-  <a href= https://gagandeep1051.github.io/Resume.FakeWebpage/>Fake Resume</a>
+<header>
+    <h1>355 Dashboard</h1>
+    <h4>Gagandeep singh</h4>
+    <hr>
+</header>
+<div id="box1" >
+    <a href=https://gagandeep1051.github.io/WeatherApp/>Wealther app</a>
+</div>
+<div id="box2">
+    <a href= https://gagandeep1051.github.io/Resume.FakeWebpage/>Fake Resume</a>
+</div>
 </body>
 </html>
