--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 <div id="box2">
     <a href= https://gagandeep1051.github.io/Resume.FakeWebpage/>Fake Resume</a>
 </div>
+<div id="box3">
+    <a href= https://boilerplate-npm.gagandeepsingh9.repl.co/>Manage Node.js projects </a>
+</div>
 </body>
 </html>
