10-13 and read me

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE >
 <html>
 <link rel="Stylesheet" href="Dashboardstyle.css">
 <title>CS 355 Home Page</title>
@@ -6,37 +6,55 @@
 <header>
     <h1>355 Dashboard</h1>
     <h4>Gagandeep singh</h4>
+    <h6>Full-stack Developer and Java developer,
+As a developer, I specialize in creating modular and scalable Full Stack web pages.</h6>
     <hr>
 </header>
-<div id="box1" >
-    <a href=https://gagandeep1051.github.io/WeatherApp/>Wealther app</a>
-</div>
-<div id="box2">
-    <a href= https://gagandeep1051.github.io/Resume.FakeWebpage/>Fake Resume</a>
-</div>
-<div id="box3">
-    <a href= https://boilerplate-npm.gagandeepsingh9.repl.co/> Node.js NPM </a>
-</div>
-<div id="box4">
-    <a href= https://TestCs355.gagandeepsingh9.repl.co/>TestCs355</a>
-</div>
-<div id="box5">
-    <a href= https://boilerplate-express.gagandeepsingh9.repl.co/>Node.JS Express</a>
-</div>
 
-<div id="box6">
-    <a href=https://boilerplate-mongomongoose-1.gagandeepsingh9.repl.co/>Mongoos</a>
-</div>
-<div id="box7">
-    <a href=https://boilerplate-project-timestamp-1.gagandeepsingh9.repl.co/>Timestamp</a>
-</div>
-<div id="box8">
-    <a href=https://boilerplate-project-headerparser.gagandeepsingh9.repl.co/>Headerparser</a>
-</div>
-<div id="box9">
-    <a href=https://boilerplate-project-urlshortener.gagandeepsingh9.repl.co/>Urlshortener</a>
-</div>
+<section>
+    <div id="box1" >
+        <a href=https://gagandeep1051.github.io/WeatherApp/>Wealther app</a>
+    </div>
+    <div id="box2">
+        <a href= https://gagandeep1051.github.io/Resume.FakeWebpage/>Resume</a>
+    </div>
+    <div id="box3">
+        <a href= https://boilerplate-npm.gagandeepsingh9.repl.co/> Node.js NPM </a>
+    </div>
+    <div id="box5">
+        <a href= https://boilerplate-express.gagandeepsingh9.repl.co/>Node.JS Express</a>
+    </div>
+
+    <div id="box6">
+        <a href=https://boilerplate-mongomongoose-1.gagandeepsingh9.repl.co/>Mongoos</a>
+    </div>
+    <div id="box7">
+        <a href=https://boilerplate-project-timestamp-1.gagandeepsingh9.repl.co/>Timestamp</a>
+    </div>
+    <div id="box8">
+        <a href=https://boilerplate-project-headerparser.gagandeepsingh9.repl.co/>Headerparser</a>
+    </div>
+    <div id="box9">
+        <a href=https://boilerplate-project-urlshortener.gagandeepsingh9.repl.co/>Urlshortener</a>
+    </div>
 
 
+    <div id="box10">
+        <a href=https://boilerplate-project-filemetadata.gagandeepsingh9.repl.co/>Metadata Microservice</a>
+    </div>
+
+    <div id="box11">
+        <a href=https://boilerplate-project-exercisetracker.gagandeepsingh9.repl.co/>Exercise Tracker</a>
+    </div>
+    <div id="box12">
+        <a href=https://boilerplate-mongomongoose-1.gagandeepsingh9.repl.co
+        />MongoDb Exercise</a>
+    </div>
+     <div id="box13">
+        <a href=https://chalk-3.gursharns.repl.co/login
+        />Term Project</a>
+    </div>
+
+  </section>
 </body>
 </html>
