--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@ As a developer, I specialize in creating modular and scalable Full Stack web pag
         <a href=https://chalk-3.gursharns.repl.co/login
         />Term Project</a>
     </div>
+    <div id="box14">
+        <a href=
+        />Feedback app</a>
+    </div>
+    <div id="box15">
+        <a href=
+        />Backpack app</a>
+    </div>
+    <div id="box16">
+        <a href=
+        />Orders app</a>
+    </div>
+
 
   </section>
 </body>
